--- a/monokit/Localizable.strings
+++ b/monokit/Localizable.strings
@@ -7,3 +7,4 @@
 */
 "pinboard.title" = "Pinboard📌";
 "pinbaord.error_code_format" = "error occured(code: \(%@))";
+"pinbaord.invalid_response_format" = "error occured(invalid response: \(%@))";
